[package]
name = "superenv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo"] }
dialoguer = "0.11.0"
glob = "0.3.1"
keyring = "2.3.2"
regex = "1.10.4"
serde = "1.0.197"
serde_json = "1.0.115"
